<resources>
    <string name="app_name">Slider Puzzle</string>
    <string name="action_settings">Settings</string>
    <string name="start">New Game</string>
    <string name="selectSize">Game Size: </string>
    <string name="startNew">Start New Game</string>
    <string name="zeroMoves">Moves made: 0</string>
    <string name="selectImage">Select an Image</string>
    <string name="select">Select </string>
    <string name="reset">Reset Game</string>
    <string name="returnToMenu">Return to Menu</string>
    <string name="currentImage">Current Image:</string>
    <string name="zeroTimer">Time: 0</string>
    <string name="highScore">High Scores</string>
    <string name="okay">Okay</string>
    <string name="importCustom">Choose Your Own Image!</string>
    <string name="setVisibility">Show/Hide Numbers</string>

    <string-array name="possibleGameSizes">
        <item> 3x3 </item>
        <item> 4x4 </item>
        <item> 5x5 </item>
    </string-array>
</resources>
