<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="10dp" >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >
        <TextView
                android:id="@+id/textSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectSize"
                android:textSize="15sp"
                android:textColor="#000000"
                android:layout_alignParentLeft="true" />

        <Spinner
                android:id="@+id/selectSizeHighScore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/textSelect"
                android:layout_toRightOf="@+id/textSelect" />

        <TextView
                android:id="@+id/highScoresHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textSelect"
                android:padding="10dp"
                android:text="@string/highScore"
                android:textSize="20sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/highScoresList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/highScoresHeader"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="7dp"
                android:textSize="18sp" />
        <Button
            android:id="@+id/okBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/highScoresList"
            android:text="@string/okay"
            android:padding="10dp"/>
    </RelativeLayout>
</ScrollView>