<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:gravity="center"
    android:layout_gravity="center">

    <GridView android:id="@+id/gridView"
        android:numColumns="auto_fit"
        android:columnWidth="10dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
    </GridView>
    <TextView
        android:id="@+id/movesMade"
        android:stretchMode="columnWidth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zeroMoves"
        android:textSize="18sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_below="@id/gridView"
        />
    <TextView
            android:id="@+id/timerText"
            android:stretchMode="columnWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zeroTimer"
            android:textSize="18sp"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_below="@id/movesMade"
    />
</RelativeLayout>